Transform Addon to use Spring