@@ -19,12 +19,17 @@
  */
 package io.meeds.analytics.model.filter;
 
-import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.*;
+import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.EQUAL;
+import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.GREATER;
+import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.IN_SET;
+import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.LESS;
+import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.NOT_EQUAL;
+import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.NOT_IN_SET;
+import static io.meeds.analytics.model.filter.search.AnalyticsFieldFilterType.RANGE;
 
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 
@@ -33,7 +38,9 @@ import io.meeds.analytics.model.filter.search.AnalyticsFieldFilter;
 import io.meeds.analytics.utils.AnalyticsUtils;
 
 import groovy.transform.ToString;
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 
 @Data
 @ToString
@@ -114,7 +121,7 @@ public class AnalyticsPercentageItemFilter implements Serializable, Cloneable {
   public AnalyticsPercentageItemFilter clone() { // NOSONAR
     List<AnalyticsFieldFilter> clonedFilters = new ArrayList<>(filters).stream()
                                                                        .map(AnalyticsFieldFilter::clone)
-                                                                       .collect(Collectors.toList());
+                                                                       .toList();
     AnalyticsAggregation cloneyAggregation = yAxisAggregation == null ? null : yAxisAggregation.clone();
     return new AnalyticsPercentageItemFilter(clonedFilters, cloneyAggregation);
   }
